--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^14.8.1
   flutter_riverpod: ^2.6.1
-  riverpod_annotation: ^2.6.1
+  riverpod_annotation: ^2.3.4
+  dio: ^5.4.0
+  flutter_secure_storage: ^9.2.4
+  freezed_annotation: ^3.0.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -48,10 +52,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  riverpod_generator: ^2.6.5
-  build_runner: ^2.4.15
+  riverpod_generator: ^2.3.11
+  build_runner: ^2.4.8
   custom_lint: ^0.7.5
-  riverpod_lint: ^2.6.5
+  riverpod_lint: ^2.3.7
+  freezed: ^3.0.4
+  json_serializable: ^6.9.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
